# TCG-Plus-Tools

./: .gitignore  Cargo.toml  TODO.md  readme.md  readmeJP.md
macro-cores/: Cargo.toml
macro-cores/src/: lib.rs
macro-cores/src/derives/: enum_util.rs
macro-cores/src/procedure/: enum_util.rs  mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: cache.rs  error.rs  lib.rs
src/clients/: client.rs  mod.rs  url.rs
src/clients/events/: event.rs  mod.rs
src/county/: jp.rs  mod.rs
src/models/: event.rs  event_list.rs  mod.rs  series.rs
tests/: api.rs  macro.rs  url.rs
