[workspace]
members = [ 
    "macro-cores",
    "macros"
]

[workspace.package]
authors = [ "Ennui.lw" ]
version = "0.1.0"
edition = "2024"

[package]
name = "tcg-plus-tools"
authors.workspace = true
version.workspace = true
edition.workspace = true


[features]
jp = []
en = []
default = ["jp"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.79"
thiserror = "2.0.12"
reqwest = { version = "0.12.22", features = ["json"] }
maybe-async = "0.2.10"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.141"
select = "0.6.0"
tokio = { version = "1.46.1", features = ["full"] }
unicode_escape = "0.1.0"
regex = "1.11.1"
once_cell = "1.21.3"
url = "2.5.4"
bytes = "1.10.1"
macros = {path = "macros" }
chrono.workspace = true
macro-cores.workspace = true

[workspace.dependencies]
chrono = "0.4.41"
macro-cores = { path = "macro-cores" } 


[[test]]
name = "api"
path = "tests/api.rs"

[[test]]
name = "url"
path = "tests/url.rs"

[[test]]
name = "macro"
path = "tests/macro.rs"

